# Robotics_HW8

devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
hw8/Question1/: Initials_ETA
hw8/Question2/hello_world/: CMakeLists.txt
hw8/Question2/hello_world/src/: my_name.cpp
hw8/Question3/: teleop.launch
hw8/Question4/: pubvel_spiral.cpp  spiral_orange.launch
hw8/Question5/: pubvel_discrete_motion.cpp
logs/hello_world/: build.check.003.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
logs/param/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.029.log.stderr  build.make.037.log.stderr  build.make.101.log.stderr  build.make.102.log.stderr  build.make.117.log.stderr  build.make.118.log.stderr  build.make.119.log.stderr  build.make.121.log.stderr  build.make.123.log.stderr  build.make.124.log.stderr  build.make.126.log.stderr
logs/pub_sub2/: build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.076.log.stderr  build.make.077.log.stderr  build.make.078.log.stderr  (+21 more)
src/param/: CMakeLists.txt  fast_yellow.launch  spiral_orange.launch
src/param/src/: pubvel_spiral.cpp  set_bg_color.cpp
src/pub_sub2/: CMakeLists.txt  corner.txt
src/pub_sub2/launch/: turtlesim_L.launch  turtlesim_avoid.launch
src/pub_sub2/src/: pubvel_smart.cpp  pubvel_smart.cpp.autosave
src/service/: CMakeLists.txt  package.xml.autosave
src/service/src/: pubvel_discrete_motion.cpp  pubvel_toggle.cpp
(+75 files in other folders)
